--- a/src/examples/Bidding.ipynb
+++ b/src/examples/Bidding.ipynb
@@ -42,7 +42,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading config file d:\\GitHub\\ben\\src\\./config/default_tf1x.conf\n"
+      "Loading config file d:\\GitHub\\ben\\src\\./config/TF1.x/default_tf1x.conf\n"
      ]
     },
     {
@@ -51,7 +51,7 @@
      "text": [
       "WARNING:tensorflow:From d:\\GitHub\\ben\\src\\nn\\bidderv2.py:3: The name tf.disable_v2_behavior is deprecated. Please use tf.compat.v1.disable_v2_behavior instead.\n",
       "\n",
-      "WARNING:tensorflow:From c:\\ProgramData\\miniconda3\\Lib\\site-packages\\tensorflow\\python\\compat\\v2_compat.py:98: disable_resource_variables (from tensorflow.python.ops.resource_variables_toggle) is deprecated and will be removed in a future version.\n",
+      "WARNING:tensorflow:From C:\\Users\\Thorvald.AALBORGDATA\\AppData\\Roaming\\Python\\Python312\\site-packages\\tensorflow\\python\\compat\\v2_compat.py:98: disable_resource_variables (from tensorflow.python.ops.resource_variables_toggle) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "non-resource variables are not supported in the long term\n",
       "WARNING:tensorflow:From d:\\GitHub\\ben\\src\\nn\\bidderv2.py:12: The name tf.Session is deprecated. Please use tf.compat.v1.Session instead.\n",
@@ -60,7 +60,6 @@
       "\n",
       "INFO:tensorflow:Restoring parameters from ..\\models/GIB/2024-07-06_bidding_V2-3114000\n",
       "INFO:tensorflow:Restoring parameters from ..\\models/GIB/2024-07-06_bidding_V2-3114000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\models/contract/contract-193200\n",
       "INFO:tensorflow:Restoring parameters from ..\\models/GIB/binfo_V2-1420000\n",
       "INFO:tensorflow:Restoring parameters from ..\\models/lead/lead_suit-999000\n",
       "INFO:tensorflow:Restoring parameters from ..\\models/lead/lead_nt-475000\n",
@@ -80,13 +79,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading config file d:\\GitHub\\ben\\src\\./config/default_tf1x.conf\n"
+      "Loading config file d:\\GitHub\\ben\\src\\./config/TF1.x/default_tf1x.conf\n"
      ]
     }
    ],
    "source": [
-    "models = Models.from_conf(conf.load('./config/default_tf1x.conf'),'..')   # loading neural networks\n",
-    "sampler = Sample.from_conf(conf.load('./config/default_tf1x.conf'))  # Load sampling strategies"
+    "models = Models.from_conf(conf.load('./config/TF1.x/default_tf1x.conf'),'..')   # loading neural networks\n",
+    "sampler = Sample.from_conf(conf.load('./config/TF1.x/default_tf1x.conf'))  # Load sampling strategies"
    ]
   },
   {
@@ -117,14 +116,14 @@
        "[{'call': '4H',\n",
        "  'insta_score': 0.474,\n",
        "  'adjustment': 24,\n",
-       "  'expected_score': 256,\n",
-       "  'expected_tricks': 10.2,\n",
+       "  'expected_score': 206,\n",
+       "  'expected_tricks': 10.5,\n",
        "  'alert': 'False'},\n",
        " {'call': 'PASS',\n",
        "  'insta_score': 0.515,\n",
        "  'adjustment': 26,\n",
-       "  'expected_score': 114,\n",
-       "  'expected_tricks': 9.0,\n",
+       "  'expected_score': 39,\n",
+       "  'expected_tricks': 8.6,\n",
        "  'alert': 'False'}]"
       ]
      },
@@ -319,10 +318,10 @@
     {
      "data": {
       "text/plain": [
-       "['A642.T.T542.T753',\n",
-       " 'QJ83.AKQ72.873.A',\n",
-       " 'K7.863.KQJ6.KQ62',\n",
-       " 'T95.J954.A9.J984']"
+       "['K9.A5.T54.AJ9432',\n",
+       " 'T852.Q976.QJ972.',\n",
+       " 'AQJ64.JT8432.8.K',\n",
+       " '73.K.AK63.QT8765']"
       ]
      },
      "execution_count": 7,
@@ -354,7 +353,7 @@
     {
      "data": {
       "text/plain": [
-       "['PASS', '1H', 'PASS', '2H', 'PASS', '3H', 'PASS', 'PASS', 'PASS']"
+       "['1C', 'PASS', '1H', 'PASS', '2C', 'PASS', '2H', 'PASS', 'PASS', 'PASS']"
       ]
      },
      "execution_count": 9,
