--- a/src/examples/CardByCardAnalysis.ipynb
+++ b/src/examples/CardByCardAnalysis.ipynb
@@ -41,7 +41,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading config file d:\\GitHub\\ben\\src\\./config/default_tf1x.conf\n"
+      "Loading config file d:\\GitHub\\ben\\src\\./config/TF1.x/default_tf1x.conf\n"
      ]
     },
     {
@@ -50,7 +50,7 @@
      "text": [
       "WARNING:tensorflow:From d:\\GitHub\\ben\\src\\nn\\bidderv2.py:3: The name tf.disable_v2_behavior is deprecated. Please use tf.compat.v1.disable_v2_behavior instead.\n",
       "\n",
-      "WARNING:tensorflow:From c:\\ProgramData\\miniconda3\\Lib\\site-packages\\tensorflow\\python\\compat\\v2_compat.py:98: disable_resource_variables (from tensorflow.python.ops.resource_variables_toggle) is deprecated and will be removed in a future version.\n",
+      "WARNING:tensorflow:From C:\\Users\\Thorvald.AALBORGDATA\\AppData\\Roaming\\Python\\Python312\\site-packages\\tensorflow\\python\\compat\\v2_compat.py:98: disable_resource_variables (from tensorflow.python.ops.resource_variables_toggle) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "non-resource variables are not supported in the long term\n",
       "WARNING:tensorflow:From d:\\GitHub\\ben\\src\\nn\\bidderv2.py:12: The name tf.Session is deprecated. Please use tf.compat.v1.Session instead.\n",
@@ -59,7 +59,6 @@
       "\n",
       "INFO:tensorflow:Restoring parameters from ..\\models/GIB/2024-07-06_bidding_V2-3114000\n",
       "INFO:tensorflow:Restoring parameters from ..\\models/GIB/2024-07-06_bidding_V2-3114000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\models/contract/contract-193200\n",
       "INFO:tensorflow:Restoring parameters from ..\\models/GIB/binfo_V2-1420000\n",
       "INFO:tensorflow:Restoring parameters from ..\\models/lead/lead_suit-999000\n",
       "INFO:tensorflow:Restoring parameters from ..\\models/lead/lead_nt-475000\n",
@@ -79,13 +78,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading config file d:\\GitHub\\ben\\src\\./config/default_tf1x.conf\n"
+      "Loading config file d:\\GitHub\\ben\\src\\./config/TF1.x/default_tf1x.conf\n"
      ]
     }
    ],
    "source": [
-    "models = Models.from_conf(conf.load('./config/default_tf1x.conf'),'..')   # loading neural networks\n",
-    "sampler = Sample.from_conf(conf.load('./config/default_tf1x.conf'))  # Load sampling strategies\n",
+    "models = Models.from_conf(conf.load('./config/TF1.x/default_tf1x.conf'),'..')   # loading neural networks\n",
+    "sampler = Sample.from_conf(conf.load('./config/TF1.x/default_tf1x.conf'))  # Load sampling strategies\n",
     "# For some strange reason PIMC is crashing the second time it is called from Jupyter\n",
     "models.pimc_use_declaring = False\n",
     "models.pimc_use_defending = False"
@@ -160,7 +159,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1N Suggested bid from NN: CandidateBid(bid=1C  , insta_score=0.9999, expected_score=---, expected_mp=---, expected_imp=---, expected_tricks=---, adjust=---, alert=   )\n",
+      "1N Suggested bid from NN: CandidateBid(bid=1C  , insta_score=0.9999, expected_score=---, expected_mp=---, expected_imp=---, expected_tricks=---, adjust=---, alert=    )\n",
       "1N is not in the bids from the neural network\n",
       "PASS OK NN-value: 1.000\n",
       "4H OK NN-value: 0.993\n",
@@ -226,12 +225,12 @@
       "S6 OK\n",
       "CJ OK\n",
       "S7 OK\n",
-      "H8 OK\n",
-      "C9 Forced\n",
+      "H8 Forced\n",
+      "C9 OK\n",
       "D2 OK\n",
       "S8 OK\n",
-      "H5 Forced\n",
-      "CQ OK\n",
+      "H5 OK\n",
+      "CQ Forced\n",
       "HT OK\n"
      ]
     }
@@ -321,22 +320,26 @@
        "   'insta_score': 0.474,\n",
        "   'expected_tricks_dd': 10.25,\n",
        "   'p_make_contract': 0.23,\n",
-       "   'expected_score_dd': 463},\n",
+       "   'expected_score_dd': 463,\n",
+       "   'msg': 'suit adjust=-0.2'},\n",
        "  {'card': 'Cx',\n",
        "   'insta_score': 0.307,\n",
        "   'expected_tricks_dd': 10.28,\n",
        "   'p_make_contract': 0.23,\n",
-       "   'expected_score_dd': 465},\n",
+       "   'expected_score_dd': 465,\n",
+       "   'msg': ''},\n",
        "  {'card': 'Hx',\n",
        "   'insta_score': 0.148,\n",
        "   'expected_tricks_dd': 10.39,\n",
        "   'p_make_contract': 0.25,\n",
-       "   'expected_score_dd': 453},\n",
+       "   'expected_score_dd': 453,\n",
+       "   'msg': ''},\n",
        "  {'card': 'DA',\n",
        "   'insta_score': 0.054,\n",
        "   'expected_tricks_dd': 10.42,\n",
        "   'p_make_contract': 0.17,\n",
-       "   'expected_score_dd': 510}],\n",
+       "   'expected_score_dd': 510,\n",
+       "   'msg': ''}],\n",
        " 'samples': ['x.KTxx.AQ8x.Txxx QJ98xxx.x.Kx.9xx KTx.Qxxx.T9x.QJ8 Ax.AJ98.Jxxx.AKx 0.99854',\n",
        "  'x.KTxx.AQ8x.Txxx QJTxxxx.xx.K.8xx A8.98x.T9xx.KQJx K9x.AQJx.Jxxx.A9 0.99854',\n",
        "  'x.KTxx.AQ8x.Txxx KQJ9xxx.Q9x.Kxx. T8.J8xx.Txx.KJ8x Axx.Ax.J9x.AQ9xx 0.78955',\n",
@@ -566,7 +569,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Board(dealer='S', vuln=[False, True], hands=['9872.A3.KJ973.53', 'J6QA.5268.5.4JQ2', 'KT4.J.Q86.AKT976', '53.KQT974.AT42.8'], auction=['1C', '2H', 'X', '4H', '4S', 'PASS', 'PASS', 'PASS'], play=['DA', 'D3', 'D5', 'D6', 'C8', 'C3', 'CJ', 'CA', 'S4', 'S5', 'S8', 'SJ', 'H5', 'HJ', 'HQ', 'HA', 'S2', 'SA', 'ST', 'S3', 'H2', 'SK', 'H4', 'H3', 'D8', 'D2', 'DJ', 'S6', 'SQ', 'C6', 'H7', 'S7', 'H8', 'C7', 'HK', 'S9', 'C5', 'C2', 'CT', 'HT', 'CK', 'H9', 'D7', 'C4', 'DQ', 'D4', 'DK', 'H6', 'D9', 'CQ', 'C9', 'DT'])\n"
+      "Board(dealer='S', vuln=[False, True], hands=['9872.A3.KJ973.53', 'QJA6.2568.5.2J4Q', 'KT4.J.Q86.AKT976', '53.KQT974.AT42.8'], auction=['1C', '2H', 'X', '4H', '4S', 'PASS', 'PASS', 'PASS'], play=['DA', 'D3', 'D5', 'D6', 'C8', 'C3', 'CJ', 'CA', 'S4', 'S5', 'S8', 'SJ', 'H5', 'HJ', 'HQ', 'HA', 'S2', 'SA', 'ST', 'S3', 'H2', 'SK', 'H4', 'H3', 'D8', 'D2', 'DJ', 'S6', 'SQ', 'C6', 'H7', 'S7', 'H8', 'C7', 'HK', 'S9', 'C5', 'C2', 'CT', 'HT', 'CK', 'H9', 'D7', 'C4', 'DQ', 'D4', 'DK', 'H6', 'D9', 'CQ', 'C9', 'DT'])\n"
      ]
     }
    ],
@@ -619,11 +622,11 @@
      "text": [
       "1C OK NN-value: 1.000\n",
       "2H OK NN-value: 0.998\n",
-      "X Suggested bid from NN: CandidateBid(bid=PASS, insta_score=0.9954, expected_score=---, expected_mp=---, expected_imp=---, expected_tricks=---, adjust=---, alert=   )\n",
+      "X Suggested bid from NN: CandidateBid(bid=PASS, insta_score=0.9954, expected_score=---, expected_mp=---, expected_imp=---, expected_tricks=---, adjust=---, alert=    )\n",
       "X is not in the bids from the neural network\n",
-      "4H Suggested bid from NN: CandidateBid(bid=3H  , insta_score=0.4051, expected_score=    2, expected_mp=---, expected_imp=---, expected_tricks= 9.25, adjust=20.26, alert=   )\n",
+      "4H Suggested bid from NN: CandidateBid(bid=3H  , insta_score=0.4051, expected_score=   35, expected_mp=---, expected_imp=---, expected_tricks= 9.04, adjust=20.26, alert=    )\n",
       "4H is not in the bids from the neural network\n",
-      "4S Suggested bid from NN: CandidateBid(bid=PASS, insta_score=0.9568, expected_score=---, expected_mp=---, expected_imp=---, expected_tricks=---, adjust=---, alert=   )\n",
+      "4S Suggested bid from NN: CandidateBid(bid=PASS, insta_score=0.9568, expected_score=---, expected_mp=---, expected_imp=---, expected_tricks=---, adjust=---, alert=    )\n",
       "4S is not in the bids from the neural network\n",
       "PASS OK NN-value: 0.998\n",
       "PASS OK NN-value: 0.999\n",
@@ -652,11 +655,11 @@
       "C3 OK\n",
       "CJ OK\n",
       "CA OK\n",
-      "S4 ? losing: 0.55\n",
+      "S4 ? losing: 0.57\n",
       "S5 OK\n",
       "S8 OK\n",
-      "SJ ?? losing: 0.70\n",
-      "H5 ? losing: 0.15\n",
+      "SJ ?? losing: 0.75\n",
+      "H5 ? losing: 0.14\n",
       "HJ OK\n",
       "HQ ?? losing: 1.94\n",
       "HA Forced\n",
@@ -664,7 +667,7 @@
       "SA OK\n",
       "ST OK\n",
       "S3 Forced\n",
-      "H2 ? losing: 0.35\n",
+      "H2 ? losing: 0.32\n",
       "SK OK\n",
       "H4 OK\n",
       "H3 ?? losing: 1.00\n",
@@ -720,18 +723,18 @@
       "text/plain": [
        "{'card': 'DQ',\n",
        " 'who': 'NN-Make',\n",
-       " 'quality': '0.1661',\n",
+       " 'quality': '0.1645',\n",
        " 'hcp': [6.7, 8.3],\n",
        " 'shape': [3.4, 3.8, 3.3, 2.4, 2.2, 6.0, 2.7, 2.0],\n",
        " 'candidates': [{'card': 'DQ',\n",
        "   'insta_score': 0.095,\n",
-       "   'expected_tricks_dd': 7.04,\n",
+       "   'expected_tricks_dd': 7.05,\n",
        "   'p_make_contract': 0.0,\n",
        "   'expected_score_dd': -98,\n",
        "   'msg': ''},\n",
        "  {'card': 'D8',\n",
        "   'insta_score': 0.046,\n",
-       "   'expected_tricks_dd': 7.04,\n",
+       "   'expected_tricks_dd': 7.05,\n",
        "   'p_make_contract': 0.0,\n",
        "   'expected_score_dd': -98,\n",
        "   'msg': ''},\n",
@@ -739,7 +742,7 @@
        "   'insta_score': 0.414,\n",
        "   'expected_tricks_dd': 7.03,\n",
        "   'p_make_contract': 0.0,\n",
-       "   'expected_score_dd': -98,\n",
+       "   'expected_score_dd': -99,\n",
        "   'msg': ''},\n",
        "  {'card': 'CK',\n",
        "   'insta_score': 0.168,\n",
@@ -749,66 +752,66 @@
        "   'msg': ''},\n",
        "  {'card': 'S4',\n",
        "   'insta_score': 0.192,\n",
-       "   'expected_tricks_dd': 6.49,\n",
+       "   'expected_tricks_dd': 6.48,\n",
        "   'p_make_contract': 0.0,\n",
        "   'expected_score_dd': -128,\n",
        "   'msg': 'trump adjust=0.05'},\n",
        "  {'card': 'ST',\n",
        "   'insta_score': 0.057,\n",
-       "   'expected_tricks_dd': 6.49,\n",
+       "   'expected_tricks_dd': 6.48,\n",
        "   'p_make_contract': 0.0,\n",
        "   'expected_score_dd': -128,\n",
        "   'msg': 'trump adjust=0.05'},\n",
        "  {'card': 'SK',\n",
        "   'insta_score': 0.016,\n",
-       "   'expected_tricks_dd': 6.11,\n",
+       "   'expected_tricks_dd': 6.1,\n",
        "   'p_make_contract': 0.0,\n",
        "   'expected_score_dd': -147,\n",
        "   'msg': 'trump adjust=0.05'},\n",
        "  {'card': 'C6',\n",
        "   'insta_score': 0.009,\n",
-       "   'expected_tricks_dd': 5.98,\n",
+       "   'expected_tricks_dd': 5.99,\n",
        "   'p_make_contract': 0.0,\n",
        "   'expected_score_dd': -151,\n",
        "   'msg': ''},\n",
        "  {'card': 'C7',\n",
        "   'insta_score': 0.009,\n",
-       "   'expected_tricks_dd': 5.98,\n",
+       "   'expected_tricks_dd': 5.99,\n",
        "   'p_make_contract': 0.0,\n",
        "   'expected_score_dd': -151,\n",
        "   'msg': ''},\n",
        "  {'card': 'C9',\n",
        "   'insta_score': 0.002,\n",
-       "   'expected_tricks_dd': 5.98,\n",
+       "   'expected_tricks_dd': 5.99,\n",
        "   'p_make_contract': 0.0,\n",
        "   'expected_score_dd': -151,\n",
        "   'msg': ''},\n",
        "  {'card': 'CT',\n",
        "   'insta_score': 0.002,\n",
-       "   'expected_tricks_dd': 5.98,\n",
+       "   'expected_tricks_dd': 5.99,\n",
        "   'p_make_contract': 0.0,\n",
        "   'expected_score_dd': -151,\n",
        "   'msg': ''}],\n",
-       " 'samples': ['Qx.KTxxxx.A.Q8xx 98xx.Ax.KJ9xx.xx AJxx.Q98x.Txxx.J KTx.J.Q8x.AKT9xx | 0.52439 0.02804 0.72728 0.12564 ',\n",
-       "  'Q.KT8xxx.Ax.Q8xx 98xx.Ax.KJ9xx.xx AJxxx.Q9xx.Txx.J KTx.J.Q8x.AKT9xx | 0.49714 0.02658 0.36988 0.06620 ',\n",
-       "  'x.KQ9xxx.Ax.Q8xx 98xx.Ax.KJ9xx.xx AQJxx.T8xx.Txx.J KTx.J.Q8x.AKT9xx | 0.48421 0.02589 0.24991 0.03809 ',\n",
-       "  'x.KQ98xx.AT.Q8xx 98xx.Ax.KJ9xx.xx AQJxx.Txxx.xxx.J KTx.J.Q8x.AKT9xx | 0.48288 0.02582 0.20144 0.03609 ',\n",
-       "  'x.KQTxxx.AT.Q8xx 98xx.Ax.KJ9xx.xx AQJxx.98xx.xxx.J KTx.J.Q8x.AKT9xx | 0.47965 0.02565 0.19945 0.04048 ',\n",
-       "  'xx.KQ8xxx.A.Q8xx 98xx.Ax.KJ9xx.xx AQJx.T9xx.Txxx.J KTx.J.Q8x.AKT9xx | 0.47710 0.02551 0.50678 0.08593 ',\n",
-       "  'x.KQT8xx.AT.Q8xx 98xx.Ax.KJ9xx.xx AQJxx.9xxx.xxx.J KTx.J.Q8x.AKT9xx | 0.47348 0.02532 0.19562 0.03906 ',\n",
-       "  'x.KQ8xxx.Ax.Q8xx 98xx.Ax.KJ9xx.xx AQJxx.T9xx.Txx.J KTx.J.Q8x.AKT9xx | 0.47131 0.02520 0.26388 0.04606 ',\n",
-       "  'Q.KQ9xxx.ATxx.8x 98xx.Ax.KJ9xx.xx AJxxx.T8xx.x.QJx KTx.J.Q8x.AKT9xx | 0.35760 0.03824 0.06853 0.14695 ',\n",
-       "  'Q.KQ98xx.ATxx.8x 98xx.Ax.KJ9xx.xx AJxxx.Txxx.x.QJx KTx.J.Q8x.AKT9xx | 0.35239 0.01884 0.06012 0.15281 ',\n",
-       "  'Qx.KQ8xxx.ATxx.8 98xx.Ax.KJ9xx.xx AJxx.T9xx.x.QJxx KTx.J.Q8x.AKT9xx | 0.35229 0.03767 0.05823 0.29811 ',\n",
-       "  'Qx.KQTxxx.ATxx.8 98xx.Ax.KJ9xx.xx AJxx.98xx.x.QJxx KTx.J.Q8x.AKT9xx | 0.35073 0.01875 0.05013 0.27782 ',\n",
-       "  'Qx.QTxxxx.A.Q8xx 98xx.Ax.KJ9xx.xx AJxx.K98x.Txxx.J KTx.J.Q8x.AKT9xx | 0.33775 0.01806 0.68856 0.12092 ',\n",
-       "  '.KQT9xx.ATxx.Q8x 98xx.Ax.KJ9xx.xx AQJxxx.8xxx.x.Jx KTx.J.Q8x.AKT9xx | 0.30874 0.01651 0.09940 0.03964 ',\n",
-       "  'J.KT9xxx.AT.Q8xx 98xx.Ax.KJ9xx.xx AQxxx.Q8xx.xxx.J KTx.J.Q8x.AKT9xx | 0.29368 0.01570 0.22668 0.06455 ',\n",
-       "  'x.KQTxxx.ATxx.Q8 98xx.Ax.KJ9xx.xx AQJxx.98xx.x.Jxx KTx.J.Q8x.AKT9xx | 0.28801 0.01540 0.06348 0.05911 ',\n",
-       "  'Jx.KTxxxx.A.Q8xx 98xx.Ax.KJ9xx.xx AQxx.Q98x.Txxx.J KTx.J.Q8x.AKT9xx | 0.28067 0.01501 0.73044 0.14102 ',\n",
-       "  'J.KT8xxx.AT.Q8xx 98xx.Ax.KJ9xx.xx AQxxx.Q9xx.xxx.J KTx.J.Q8x.AKT9xx | 0.28068 0.01501 0.23906 0.05822 ',\n",
-       "  'Jx.K8xxxx.A.Q8xx 98xx.Ax.KJ9xx.xx AQxx.QT9x.Txxx.J KTx.J.Q8x.AKT9xx | 0.27370 0.01463 0.73141 0.13180 ',\n",
-       "  'Jx.KT98xx.A.Q8xx 98xx.Ax.KJ9xx.xx AQxx.Qxxx.Txxx.J KTx.J.Q8x.AKT9xx | 0.26888 0.01438 0.65962 0.13378 ']}"
+       " 'samples': ['Qx.KTxxxx.A.Q8xx 98xx.Ax.KJ9xx.xx AJxx.Q98x.Txxx.J KTx.J.Q8x.AKT9xx | 0.52439 0.02776 -1.00000 -1.00000 ',\n",
+       "  'Q.KT8xxx.Ax.Q8xx 98xx.Ax.KJ9xx.xx AJxxx.Q9xx.Txx.J KTx.J.Q8x.AKT9xx | 0.49714 0.02632 -1.00000 -1.00000 ',\n",
+       "  'x.KQ9xxx.Ax.Q8xx 98xx.Ax.KJ9xx.xx AQJxx.T8xx.Txx.J KTx.J.Q8x.AKT9xx | 0.48421 0.02563 -1.00000 -1.00000 ',\n",
+       "  'x.KQ98xx.AT.Q8xx 98xx.Ax.KJ9xx.xx AQJxx.Txxx.xxx.J KTx.J.Q8x.AKT9xx | 0.48288 0.02556 -1.00000 -1.00000 ',\n",
+       "  'x.KQTxxx.AT.Q8xx 98xx.Ax.KJ9xx.xx AQJxx.98xx.xxx.J KTx.J.Q8x.AKT9xx | 0.47965 0.02539 -1.00000 -1.00000 ',\n",
+       "  'xx.KQ8xxx.A.Q8xx 98xx.Ax.KJ9xx.xx AQJx.T9xx.Txxx.J KTx.J.Q8x.AKT9xx | 0.47710 0.02526 -1.00000 -1.00000 ',\n",
+       "  'x.KQT8xx.AT.Q8xx 98xx.Ax.KJ9xx.xx AQJxx.9xxx.xxx.J KTx.J.Q8x.AKT9xx | 0.47348 0.02507 -1.00000 -1.00000 ',\n",
+       "  'x.KQ8xxx.Ax.Q8xx 98xx.Ax.KJ9xx.xx AQJxx.T9xx.Txx.J KTx.J.Q8x.AKT9xx | 0.47131 0.02495 -1.00000 -1.00000 ',\n",
+       "  'Q.KQ9xxx.ATxx.8x 98xx.Ax.KJ9xx.xx AJxxx.T8xx.x.QJx KTx.J.Q8x.AKT9xx | 0.35760 0.03786 -1.00000 -1.00000 ',\n",
+       "  'Q.KQ98xx.ATxx.8x 98xx.Ax.KJ9xx.xx AJxxx.Txxx.x.QJx KTx.J.Q8x.AKT9xx | 0.35239 0.01866 -1.00000 -1.00000 ',\n",
+       "  'Qx.KQ8xxx.ATxx.8 98xx.Ax.KJ9xx.xx AJxx.T9xx.x.QJxx KTx.J.Q8x.AKT9xx | 0.35229 0.03730 -1.00000 -1.00000 ',\n",
+       "  'Qx.KQTxxx.ATxx.8 98xx.Ax.KJ9xx.xx AJxx.98xx.x.QJxx KTx.J.Q8x.AKT9xx | 0.35073 0.01857 -1.00000 -1.00000 ',\n",
+       "  'Qx.QTxxxx.A.Q8xx 98xx.Ax.KJ9xx.xx AJxx.K98x.Txxx.J KTx.J.Q8x.AKT9xx | 0.33775 0.01788 -1.00000 -1.00000 ',\n",
+       "  '.KQT9xx.ATxx.Q8x 98xx.Ax.KJ9xx.xx AQJxxx.8xxx.x.Jx KTx.J.Q8x.AKT9xx | 0.30874 0.01634 -1.00000 -1.00000 ',\n",
+       "  'J.KT9xxx.AT.Q8xx 98xx.Ax.KJ9xx.xx AQxxx.Q8xx.xxx.J KTx.J.Q8x.AKT9xx | 0.29368 0.01555 -1.00000 -1.00000 ',\n",
+       "  'x.KQTxxx.ATxx.Q8 98xx.Ax.KJ9xx.xx AQJxx.98xx.x.Jxx KTx.J.Q8x.AKT9xx | 0.28801 0.01525 -1.00000 -1.00000 ',\n",
+       "  'Jx.KTxxxx.A.Q8xx 98xx.Ax.KJ9xx.xx AQxx.Q98x.Txxx.J KTx.J.Q8x.AKT9xx | 0.28067 0.01486 -1.00000 -1.00000 ',\n",
+       "  'J.KT8xxx.AT.Q8xx 98xx.Ax.KJ9xx.xx AQxxx.Q9xx.xxx.J KTx.J.Q8x.AKT9xx | 0.28068 0.01486 -1.00000 -1.00000 ',\n",
+       "  'Jx.K8xxxx.A.Q8xx 98xx.Ax.KJ9xx.xx AQxx.QT9x.Txxx.J KTx.J.Q8x.AKT9xx | 0.27370 0.01449 -1.00000 -1.00000 ',\n",
+       "  'Jx.KT98xx.A.Q8xx 98xx.Ax.KJ9xx.xx AQxx.Qxxx.Txxx.J KTx.J.Q8x.AKT9xx | 0.26888 0.01423 -1.00000 -1.00000 ']}"
       ]
      },
      "execution_count": 14,
@@ -846,22 +849,26 @@
        "   'insta_score': 0.057,\n",
        "   'expected_tricks_dd': 11.41,\n",
        "   'p_make_contract': 0.01,\n",
-       "   'expected_score_dd': 456},\n",
+       "   'expected_score_dd': 456,\n",
+       "   'msg': ''},\n",
        "  {'card': 'C8',\n",
        "   'insta_score': 0.428,\n",
        "   'expected_tricks_dd': 11.75,\n",
        "   'p_make_contract': 0.01,\n",
-       "   'expected_score_dd': 466},\n",
+       "   'expected_score_dd': 466,\n",
+       "   'msg': ''},\n",
        "  {'card': 'HK',\n",
        "   'insta_score': 0.44,\n",
        "   'expected_tricks_dd': 11.65,\n",
        "   'p_make_contract': 0.01,\n",
-       "   'expected_score_dd': 467},\n",
+       "   'expected_score_dd': 468,\n",
+       "   'msg': 'suit adjust=0.5'},\n",
        "  {'card': 'Sx',\n",
        "   'insta_score': 0.065,\n",
        "   'expected_tricks_dd': 11.83,\n",
        "   'p_make_contract': 0.01,\n",
-       "   'expected_score_dd': 473}],\n",
+       "   'expected_score_dd': 472,\n",
+       "   'msg': 'suit adjust=-0.2'}],\n",
        " 'samples': ['xx.KQT9xx.ATxx.8 A8xx.x.QJ8xx.KJx T9x.A8xxx.9x.9xx KQJx.J.Kx.AQTxxx 0.88818',\n",
        "  'xx.KQT9xx.ATxx.8 T98x.A.K9xx.KQxx Qx.J8xxx.QJ8x.9x AKJxx.x.x.AJTxxx 0.74658',\n",
        "  'xx.KQT9xx.ATxx.8 AJ98.8.QJ8xx.Qxx xx.Jxxxx.9xx.JTx KQTxx.A.K.AK9xxx 0.74268',\n",
