--- a/src/examples/OpeningLead.ipynb
+++ b/src/examples/OpeningLead.ipynb
@@ -36,7 +36,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading config file d:\\GitHub\\ben\\src\\./config/default_tf1x.conf\n"
+      "Loading config file d:\\GitHub\\ben\\src\\./config/TF1.x/default_tf1x.conf\n"
      ]
     },
     {
@@ -45,7 +45,7 @@
      "text": [
       "WARNING:tensorflow:From d:\\GitHub\\ben\\src\\nn\\bidderv2.py:3: The name tf.disable_v2_behavior is deprecated. Please use tf.compat.v1.disable_v2_behavior instead.\n",
       "\n",
-      "WARNING:tensorflow:From c:\\ProgramData\\miniconda3\\Lib\\site-packages\\tensorflow\\python\\compat\\v2_compat.py:98: disable_resource_variables (from tensorflow.python.ops.resource_variables_toggle) is deprecated and will be removed in a future version.\n",
+      "WARNING:tensorflow:From C:\\Users\\Thorvald.AALBORGDATA\\AppData\\Roaming\\Python\\Python312\\site-packages\\tensorflow\\python\\compat\\v2_compat.py:98: disable_resource_variables (from tensorflow.python.ops.resource_variables_toggle) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "non-resource variables are not supported in the long term\n",
       "WARNING:tensorflow:From d:\\GitHub\\ben\\src\\nn\\bidderv2.py:12: The name tf.Session is deprecated. Please use tf.compat.v1.Session instead.\n",
@@ -54,7 +54,6 @@
       "\n",
       "INFO:tensorflow:Restoring parameters from ..\\models/GIB/2024-07-06_bidding_V2-3114000\n",
       "INFO:tensorflow:Restoring parameters from ..\\models/GIB/2024-07-06_bidding_V2-3114000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\models/contract/contract-193200\n",
       "INFO:tensorflow:Restoring parameters from ..\\models/GIB/binfo_V2-1420000\n",
       "INFO:tensorflow:Restoring parameters from ..\\models/lead/lead_suit-999000\n",
       "INFO:tensorflow:Restoring parameters from ..\\models/lead/lead_nt-475000\n",
@@ -74,13 +73,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading config file d:\\GitHub\\ben\\src\\./config/default_tf1x.conf\n"
+      "Loading config file d:\\GitHub\\ben\\src\\./config/TF1.x/default_tf1x.conf\n"
      ]
     }
    ],
    "source": [
-    "models = Models.from_conf(conf.load('./config/default_tf1x.conf'),'..')   # loading neural networks\n",
-    "sampler = Sample.from_conf(conf.load('./config/default_tf1x.conf'), False)  # Load sampling strategies"
+    "models = Models.from_conf(conf.load('./config/TF1.x/default_tf1x.conf'),'..')   # loading neural networks\n",
+    "sampler = Sample.from_conf(conf.load('./config/TF1.x/default_tf1x.conf'), False)  # Load sampling strategies"
    ]
   },
   {
@@ -110,7 +109,7 @@
     "\n",
     "# what to lead?\n",
     "lead_bot = BotLead([True, True], hand, models, sampler, 0, 0, dds, False)\n",
-    "lead = lead_bot.find_opening_lead(auction)"
+    "lead = lead_bot.find_opening_lead(auction, {})"
    ]
   },
   {
@@ -157,22 +156,26 @@
        "  'insta_score': 0.279,\n",
        "  'expected_tricks_dd': 11.0,\n",
        "  'p_make_contract': 0.14,\n",
-       "  'expected_score_dd': 551},\n",
+       "  'expected_score_dd': 551,\n",
+       "  'msg': ''},\n",
        " {'card': 'Cx',\n",
        "  'insta_score': 0.298,\n",
        "  'expected_tricks_dd': 11.19,\n",
        "  'p_make_contract': 0.07,\n",
-       "  'expected_score_dd': 606},\n",
+       "  'expected_score_dd': 606,\n",
+       "  'msg': ''},\n",
        " {'card': 'Sx',\n",
        "  'insta_score': 0.151,\n",
        "  'expected_tricks_dd': 11.26,\n",
        "  'p_make_contract': 0.07,\n",
-       "  'expected_score_dd': 607},\n",
+       "  'expected_score_dd': 607,\n",
+       "  'msg': 'suit adjust=0.3'},\n",
        " {'card': 'DA',\n",
        "  'insta_score': 0.146,\n",
        "  'expected_tricks_dd': 10.83,\n",
        "  'p_make_contract': 0.05,\n",
-       "  'expected_score_dd': 612}]"
+       "  'expected_score_dd': 612,\n",
+       "  'msg': ''}]"
       ]
      },
      "execution_count": 5,
