--- a/src/examples/bidding_info.ipynb
+++ b/src/examples/bidding_info.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading config file d:\\GitHub\\ben\\src\\./config/default_tf1x.conf\n"
+      "Loading config file d:\\GitHub\\ben\\src\\./config/TF1.x/default_tf1x.conf\n"
      ]
     },
     {
@@ -18,7 +18,7 @@
      "text": [
       "WARNING:tensorflow:From d:\\GitHub\\ben\\src\\nn\\bidderv2.py:3: The name tf.disable_v2_behavior is deprecated. Please use tf.compat.v1.disable_v2_behavior instead.\n",
       "\n",
-      "WARNING:tensorflow:From c:\\ProgramData\\miniconda3\\Lib\\site-packages\\tensorflow\\python\\compat\\v2_compat.py:98: disable_resource_variables (from tensorflow.python.ops.resource_variables_toggle) is deprecated and will be removed in a future version.\n",
+      "WARNING:tensorflow:From C:\\Users\\Thorvald.AALBORGDATA\\AppData\\Roaming\\Python\\Python312\\site-packages\\tensorflow\\python\\compat\\v2_compat.py:98: disable_resource_variables (from tensorflow.python.ops.resource_variables_toggle) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "non-resource variables are not supported in the long term\n",
       "WARNING:tensorflow:From d:\\GitHub\\ben\\src\\nn\\bidderv2.py:12: The name tf.Session is deprecated. Please use tf.compat.v1.Session instead.\n",
@@ -27,7 +27,6 @@
       "\n",
       "INFO:tensorflow:Restoring parameters from ..\\models/GIB/2024-07-06_bidding_V2-3114000\n",
       "INFO:tensorflow:Restoring parameters from ..\\models/GIB/2024-07-06_bidding_V2-3114000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\models/contract/contract-193200\n",
       "INFO:tensorflow:Restoring parameters from ..\\models/GIB/binfo_V2-1420000\n",
       "INFO:tensorflow:Restoring parameters from ..\\models/lead/lead_suit-999000\n",
       "INFO:tensorflow:Restoring parameters from ..\\models/lead/lead_nt-475000\n",
@@ -47,7 +46,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading config file d:\\GitHub\\ben\\src\\./config/default_tf1x.conf\n"
+      "Loading config file d:\\GitHub\\ben\\src\\./config/TF1.x/default_tf1x.conf\n"
      ]
     }
    ],
@@ -68,8 +67,8 @@
     "np.set_printoptions(precision=2, suppress=True, linewidth=200)\n",
     "\n",
     "\n",
-    "models = Models.from_conf(conf.load('./config/default_tf1x.conf'),'..')   # loading neural networks\n",
-    "sampler = Sample.from_conf(conf.load('./config/default_tf1x.conf'))  # Load sampling strategies"
+    "models = Models.from_conf(conf.load('./config/TF1.x/default_tf1x.conf'),'..')   # loading neural networks\n",
+    "sampler = Sample.from_conf(conf.load('./config/TF1.x/default_tf1x.conf'))  # Load sampling strategies"
    ]
   },
   {
