--- a/UCBC 2024/Simulations/AnalyseBidding.ipynb
+++ b/UCBC 2024/Simulations/AnalyseBidding.ipynb
@@ -24,7 +24,7 @@
     "from analysis import CardByCard\n",
     "\n",
     "from nn.models import Models\n",
-    "from bots import BotBid\n",
+    "from botbidder import BotBid\n",
     "from util import hand_to_str\n",
     "from sample import Sample\n",
     "import conf\n",
