--- a/UCBC 2024/Simulations/Bidding1S.ipynb
+++ b/UCBC 2024/Simulations/Bidding1S.ipynb
@@ -46,7 +46,7 @@
     "sys.path.append('../../src')\n",
     "\n",
     "from nn.models import Models\n",
-    "from bots import BotBid\n",
+    "from botbidder import BotBid\n",
     "from util import hand_to_str\n",
     "from sample import Sample\n",
     "import conf\n",
