--- a/UCBC 2024/Simulations/BiddingCrazy.ipynb
+++ b/UCBC 2024/Simulations/BiddingCrazy.ipynb
@@ -29,7 +29,7 @@
     "# Just disables the warnings\n",
     "os.environ['TF_CPP_MIN_LOG_LEVEL'] = '2'\n",
     "from nn.models import Models\n",
-    "from bots import BotBid\n",
+    "from botbidder import BotBid\n",
     "from bidding import bidding\n",
     "from util import hand_to_str\n",
     "from deck52 import random_deal\n",
