--- a/src/examples/Bidding.ipynb
+++ b/src/examples/Bidding.ipynb
@@ -21,7 +21,7 @@
     "os.chdir('..')\n",
     "\n",
     "from nn.models import Models\n",
-    "from bots import BotBid\n",
+    "from botbidder import BotBid\n",
     "from bidding import bidding\n",
     "from util import hand_to_str\n",
     "from deck52 import random_deal\n",
