--- a/src/examples/SingleDummyEstimates.ipynb
+++ b/src/examples/SingleDummyEstimates.ipynb
@@ -31,7 +31,7 @@
     "from nn.models import Models\n",
     "from bidding import bidding\n",
     "from bidding.binary import parse_hand_f\n",
-    "from bots import BotBid\n",
+    "from botbidder import BotBid\n",
     "from objects import Card\n",
     "from util import hand_to_str\n",
     "from sample import Sample\n",
