--- a/UCBC 2024/Simulations/Bidding3D.ipynb
+++ b/UCBC 2024/Simulations/Bidding3D.ipynb
@@ -54,7 +54,7 @@
     "os.environ['TF_CPP_MIN_LOG_LEVEL'] = '2'\n",
     "\n",
     "from nn.models import Models\n",
-    "from bots import BotBid\n",
+    "from botbidder import BotBid\n",
     "from util import hand_to_str\n",
     "from sample import Sample\n",
     "import conf\n",
