--- a/UCBC 2024/Simulations/BiddingMichaels.ipynb
+++ b/UCBC 2024/Simulations/BiddingMichaels.ipynb
@@ -55,7 +55,7 @@
     "os.environ['BEN_HOME'] = \"../..\"\n",
     "\n",
     "from nn.models import Models\n",
-    "from bots import BotBid\n",
+    "from botbidder import BotBid\n",
     "from util import hand_to_str\n",
     "from sample import Sample\n",
     "import conf\n",
