--- a/UCBC 2024/Simulations/bidding_info.ipynb
+++ b/UCBC 2024/Simulations/bidding_info.ipynb
@@ -32,7 +32,7 @@
     "import binary\n",
     "\n",
     "from nn.models import Models\n",
-    "from bots import BotBid\n",
+    "from botbidder import BotBid\n",
     "from util import hand_to_str\n",
     "from sample import Sample\n",
     "import conf\n",
