--- a/src/examples/AnalyseBidding.ipynb
+++ b/src/examples/AnalyseBidding.ipynb
@@ -10,10 +10,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "16f73f71",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading config file d:\\GitHub\\ben\\src\\./config/default.conf\n",
+      "Loading config file d:\\GitHub\\ben\\src\\./config/default.conf\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "os.chdir('..')\n",
@@ -35,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "2940c18a",
    "metadata": {},
    "outputs": [],
@@ -52,10 +61,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "7ab0cce5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1D OK NN-value: 1.200\n",
+      "PASS OK NN-value: 1.200\n",
+      "1S OK NN-value: 1.200\n",
+      "PASS OK NN-value: 0.767\n",
+      "2D OK NN-value: 1.199\n",
+      "PASS OK NN-value: 1.200\n",
+      "2S OK NN-value: 1.106\n",
+      "PASS OK NN-value: 1.189\n",
+      "PASS OK NN-value: 1.171\n",
+      "PASS OK NN-value: 1.200\n"
+     ]
+    }
+   ],
    "source": [
     "# calling this starts the analysis\n",
     "# it will go bid-by-bid and card-by-card, and will take a few moments\n",
